--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Quote Generator</h1>
+    <a href="saved-quotes.html">Saved Quotes</a>
     <div class="wrapper">
         <div class="quote-box">
             <div id="js_quote_wrapper" class="quote-wrapper">
