--- a/saved-quotes.html
+++ b/saved-quotes.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saved Quoted</title>
+    <title>Saved Quotes</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="saved-quotes.js" defer></script>
 </head>
 <body>
     <h1>Saved Quotes</h1>
+    <a href="/">Quote Generator</a>
+    <div class="saved-quotes-wrapper" style="padding-top: 10px;"></div>
+    <template id="saved-quote-component">
+        <section style="margin: 0 10px 10px; border: 1px solid; border-radius: 4px; padding: 10px;">
+            <h4 style=" margin: 4px 0;">ID: <span style="font-weight: 500; font-size: 12px;"></span></h4>
+            <p></p>
+            <div></div>
+            <button style="margin-top: 5px;" onclick="deleteQuote(this)">Delete</button>
+        </section>
+    </template>
 </body>
 </html>
