--- a/saved-quotes.html
+++ b/saved-quotes.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1>Saved Quotes</h1>
-    <a href="/">Quote Generator</a>
+    <a href="./index.html">Quote Generator</a>
     <div class="saved-quotes-wrapper" style="padding-top: 10px;"></div>
     <template id="saved-quote-component">
         <section style="margin: 0 10px 10px; border: 1px solid; border-radius: 4px; padding: 10px;">
